# papr

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
Agent/: .dockerignore  .env.example  Dockerfile  langgraph.json  pyproject.toml
Agent/papr/: __init__.py  agent.py  backend.py  config.py  context.py
Agent/papr/middleware/: __init__.py  current_date.py  file_types.py
Agent/papr/prompts/: __init__.py  system_prompt.md
Agent/papr/tools/: __init__.py  arxiv.py  brief.py  files.py
Agent/scripts/: check_persistence.py  probe_store.py
Api/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
Api/app/: __init__.py  config.py  main.py  schemas.py
Api/app/core/: __init__.py  agent_client.py  auth.py
Api/app/routers/: __init__.py  auth.py  briefs.py  chat.py  files.py  health.py  mcp.py  papers.py  skills.py  topics.py
Api/app/services/: __init__.py  briefs.py  chat.py  errors.py  files.py  papers.py  seed.py  skills.py  store.py  topics.py
Api/scripts/: check_brief.py
Api/seed-skills/methodology-breakdown/: SKILL.md
Mcp/: Dockerfile  pyproject.toml
Mcp/app/: __init__.py  config.py  server.py  store.py
Mcp/scripts/: check_mcp.py
Memory/: AGENTS.md
Skills/analogies/: SKILL.md
Skills/critique/: SKILL.md
Skills/daily-brief/: SKILL.md
Skills/eli5/: SKILL.md
Skills/new-brief/: SKILL.md
Skills/structured-summary/: SKILL.md
Web/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
Web/src/: App.tsx  api.ts  index.css  main.tsx  styles.css  vite-env.d.ts
Web/src/api/: chat.ts  client.ts  files.ts  types.ts
Web/src/components/: Chat.tsx  FilePane.tsx  Login.tsx  Markdown.tsx  SkillsEditor.tsx  Topics.tsx
Web/src/components/chat/: ActivityTrace.tsx  ChatInterface.tsx  types.ts
Web/src/components/editor/: Editor.tsx  EditorTabs.tsx  FileView.tsx  MarkdownView.tsx  PdfViewer.tsx  RichTextEditor.tsx
Web/src/components/sidebar/: Brand.tsx  FileTree.tsx  Filesystem.tsx  Sidebar.tsx
Web/src/hooks/: useFileContent.ts  useTree.ts
Web/src/pages/: Design.tsx  Workspace.tsx
Web/src/workspace/: WorkspaceContext.tsx
